# arcade

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG_HISTORY.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  GUI_dev.md  HI.py  ISSUE_TEMPLATE.md  MANIFEST.in  Makefile  PR.md  Pipfile  README.md  README.rst  RELEASE_CHECKLIST.md  Testing shape objects.py  VERSION  a_quick_test.py  appveyor.yml  deploy.bat  dev_requirements.txt  dev_requirements_mac.txt  justfile  license.rst  list_package.py  make.bat  make.py  make.sh  makedoc.bat  makedoc.sh  makefast.bat  makefast.sh  mypy.ini  (+17 more)
.github/workflows/: autoblack.yml  create_commit_note_log.yml  push_build_to_prod_pypi.yml  push_build_to_test_pypi.yml  selfhosted_runner.yml  status_embed.yaml  test.yml  verify_types.yml
arcade/: VERSION  __init__.py  __main__.py  action.py  application.py  arcade_helper.py  arcade_types.py  backgrounds.py  buffered_draw_commands.py  camera.py  clock.py  context.py  controller.py  decorator_alternative.py  decorator_support.py  draw_commands.py  drawing_support.py  earclip.py  earclip_module.py  easing.py  emitter.py  emitter_simple.py  exceptions.py  framebuffer.py  geometry.py  geometry_generic.py  geometry_python.py  geometry_shapely.py  gui.py  helper_dictionary.txt  hit_box_utils.py  hitbox.py  isometric.py  joysticks.py  math.py  minimap.py  monkey_patch_pyglet.py  particle.py  paths.py  paths_python.py  (+35 more)
arcade/__pyinstaller/: __init__.py  hook-arcade.py
arcade/background/: __init__.py  background.py  background_texture.py  groups.py
arcade/cache/: __init__.py  hit_box.py  image.py  image_data.py  texture.py
arcade/camera/: README.md  __init__.py  camera_2d.py  data.py  data_types.py  default.py  offscreen.py  orthographic.py  perspective.py  projection_functions.py  simple_camera.py  static.py  types.py
arcade/cinematic/: __init__.py  camera_2D.py  camera_2d.py  data.py  default.py  orthographic.py  perspective.py  simple_camera.py  types.py
arcade/color/: __init__.py
arcade/csscolor/: __init__.py
arcade/draw/: __init__.py  arc.py  circle.py  helpers.py  line.py  parabola.py  point.py  polygon.py  rect.py  screenshot.py  triangle.py
arcade/examples/: animated_sprite.py  array_backed_grid.py  array_backed_grid_buffered.py  array_backed_grid_sprites.py  array_backed_grid_sprites_1.py  array_backed_grid_sprites_2.py  astar_pathfinding.py  asteroid_smasher.py  background_blending.py  background_groups.py  background_music.py  background_parallax.py  background_player_buttons.py  background_player_switch.py  background_scrolling.py  background_stationary.py  bloom_defender.py  bouncing_ball.py  bouncing_balls.py  bouncing_rectangle.py  camera_example.py  camera_perspective_demo.py  camera_platform.py  conway_alpha.py  debug_screenshot.py  decorator_bouncing_balls.py  decorator_drawing_example.py  decorator_drawing_example_02.py  decorator_drawing_example_03.py  decorator_drawing_with_loops.py  decorator_test.py  depth_of_field.py  different_screens_example.py  different_screens_minimal.py  different_screens_pause.py  different_views_multiple_windows.py  drawing_primitives.py  drawing_text objects.py  drawing_text.py  drawing_text_objects.py  (+202 more)
arcade/experimental/: __init__.py  actor_map.py  atlas_load_save.py  atlas_render_into.py  atlas_replace_image.py  background_refactor.py  basic_renderer.py  bloom_defender.py  bloom_filter.py  bloom_multilayer_defender.py  camera.py  camera_demo.py  camera_new.py  camera_refactor.py  camera_test.py  crt_filter.py  defender.py  depth_of_field.py  gaussian_kernel.py  (+51 more)
benchmarks/: bench-shapely-helper.sh  bench-shapely.sh  bench.sh
doc/: .readthedocs.yaml  404.html  404.rst  Makefile  arcade.color.rst  arcade.csscolor.rst  arcade.key.rst  arcade.rst  arcade_gl.rst  arcade_gui.rst  arcade_vs_pygame_performance.rst  blm.rst  conf.py  directory_structure.rst  distribute_macos.rst  enhancement_list.rst  game_jam_2020.rst  generate_example_thumbnails.py  get_started.rst  how_to_compile.rst  how_to_contribute.rst  how_to_submit_changes.rst  index.rst  installation.rst  installation_from_source.rst  installation_linux.rst  installation_mac.rst  installation_windows.rst  instructions_gameshell.rst  links.rst  logging.rst  make.bat  make.py  make.sh  performance_tips.rst  preprocess_files.py  pygame_comparison.rst  release_notes.rst  requirements.txt  sample_games.rst  (+3 more)
examples/: Testing_shapes.py  array_backed_grid.py  array_backed_grid_buffered.py  asteroid_smasher.py  basketball.py  bouncing_ball.py  bouncing_ball.rst  bouncing_balls.py  bouncing_rectangle.py  bouncing_rectangle.rst  drawing_primitives.py  drawing_text.py  drawing_with_functions.py  drawing_with_loops.py  drawing_with_loops.rst  full_screen_example.py  index.rst  instruction_and_game_over_screens.py  joystick.py  key_detector.py  lines_buffered.py  map.csv  maze_depth_first.py  maze_recursive.py  move_joystick.py  move_keyboard.py  move_keyboard.rst  move_mouse.py  move_mouse.rst  nested_loops_bottom_left_triangle.py  nested_loops_bottom_right_triangle.py  nested_loops_box.py  nested_loops_top_left_triangle.py  nested_loops_top_right_triangle.py  physics_app.py  physics_app_2.py  pinball.py  pinball_layout.txt  platformer.py  pool.py  (+49 more)
experimental/: a_quick_test2.py  a_quick_test3.py  a_quick_test4.py  a_quick_test5.py  physics_engine_2d.py  platformer.py  vbo_test_01.py  vbo_test_02.py  vbo_test_03.py  vbo_test_04.py
holding/: test_buffered_draw_commands.py
performance/: sprite.py
tests/: __init__.py  conftest.py  sound_test.py  test_window.py
ui_demo/: __init__.py
util/: _update_init_inspect.py  check_example_line_length.py  convert_rst_to_google_docs.py  convert_rst_to_google_docs.sh  create_example_summaries.py  create_resources_listing.py  generate_example_thumbnails.py  generate_hit_box_cache.py  make_resources_init.py  sync_example_code_with_rst.py  template_init.py  template_init.rst  template_quick_index.rst  update_init.py  update_quick_index.py  vfs.py
(+1956 files in other folders)
