[metadata]
name = arcade
description = Arcade Game Development Library
long_description = file: README.rst
author = Paul Vincent Craven
author_email = paul.craven@simpson.edu
license = MIT
license-file = license.rst
url = https://arcade.academy
download_url = https://arcade.academy
project_urls =
    Documentation = https://arcade.academy/
    Example Code = http://arcade.academy/examples/index.html
    Issue Tracker = https://github.com/pvcraven/arcade/issues
    Source = https://github.com/pvcraven/arcade
    On-line Book = http://learn.arcade.academy/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >=3.6,<3.10
install_requires =
    pyglet == 2.0dev1
    pillow ~= 8.1
    numpy == 1.20.1
    pymunk ~= 6.0.0
    pyyaml ~= 5.4
    shapely == 1.7.1
    pytiled-parser == 0.9.4a3
    dataclasses;python_version<'3.7'

[options.packages.find]
include =
    arcade
    arcade.*

[options.extras_require]
dev =
    pytest
    flake8
    mypy
    coverage
    coveralls
    pytest-mock
    pytest-cov

build =
    pep517

docs =
    sphinx
    sphinx-sitemap
    sphinx_rtd_theme
    sphinx-copybutton

[build_sphinx]
source-dir = doc
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[bdist_wheel]
universal=0

[options.entry_points]
pyinstaller40 =
  hook-dirs = arcade.__pyinstaller:get_hook_dirs

[coverage:run]
source = arcade
omit =
    ./arcade/examples/*
    ./arcade/experimental/*
    ./env/*
    ./tests/*
    ./doc/*
    ./Win*/*

[mypy:mypy]

[mypy-pyglet.*]
ignore_missing_imports = True

[mypy-pyglet_ffmpeg2]
ignore_missing_imports = True

[mypy-numpy]
ignore_missing_imports = True

[mypy-PIL.*]
ignore_missing_imports = True

[mypy-pymunk]
ignore_missing_imports = True

[mypy-pymunkoptions]
ignore_missing_imports = True

[mypy-pytiled_parser]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

