[build_sphinx]
source-dir = doc
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[bdist_wheel]
universal=0

[options.entry_points]
pyinstaller40 =
  hook-dirs = arcade.__pyinstaller:get_hook_dirs

[coverage:run]
source = arcade
omit =
    ./arcade/examples/*
    ./arcade/experimental/*
    ./env/*
    ./tests/*
    ./doc/*
    ./Win*/*

# Needed for mypy to find the config depending on version
[mypy:mypy]
[mypy]
exclude = /(perf_test|__pyinstaller|\..*)/$

[mypy-pyglet.*]
ignore_missing_imports = True

[mypy-pyglet_ffmpeg2]
ignore_missing_imports = True

[mypy-numpy]
ignore_missing_imports = True

[mypy-PIL.*]
ignore_missing_imports = True

[mypy-pymunk]
ignore_missing_imports = True

[mypy-pymunkoptions]
ignore_missing_imports = True

[mypy-pytiled_parser]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pyrr.*]
ignore_missing_imports = True

[mypy-shapely.*]
ignore_missing_imports = True

[mypy-pytiled_parser.*]
ignore_missing_imports = True
