[flake8]
# --- Description of what we ingore ---
# H405: multi line docstring summary not separated with an empty line
# W503: line break before binary operator
# E731 do not assign a lambda expression, use a def
# W291 trailing whitespace
# F811: redefinitiyon
ignore = H405, W503, F811, W291, E731
show-source = True
statistics = True
max-line-length = 120
exclude = venv,.venv,tests,build,doc,util,.mypy_cache,.pytest_cache,temp,bugs,setup.py

[tool:pytest]
norecursedirs =
    doc
    holding
    arcade/examples
    build
    .venv
    env
    dist
    temp

[build_sphinx]
source-dir = doc
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[bdist_wheel]
universal=0

[options.entry_points]
pyinstaller40 =
  hook-dirs = arcade.__pyinstaller:get_hook_dirs

[coverage:run]
source = arcade
omit =
    ./arcade/examples/*
    ./arcade/gui/examples/*
    ./arcade/experimental/*
    ./env/*
    ./tests/*
    ./doc/*
    ./Win*/*

# Needed for mypy to find the config depending on version
[mypy:mypy]
[mypy]
# strict = True
# disallow_untyped_defs = False
# disallow_untyped_calls = False
# disallow_incomplete_defs = False
exclude = /(perf_test|__pyinstaller|\..*)/$

[mypy-pyglet.*]
ignore_missing_imports = True

[mypy-pyglet_ffmpeg2]
ignore_missing_imports = True

[mypy-numpy]
ignore_missing_imports = True

[mypy-PIL.*]
ignore_missing_imports = True

[mypy-pymunk]
ignore_missing_imports = True

[mypy-pymunkoptions]
ignore_missing_imports = True

[mypy-pytiled_parser]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pyrr.*]
ignore_missing_imports = True

[mypy-shapely.*]
ignore_missing_imports = True

[mypy-pytiled_parser.*]
ignore_missing_imports = True

[mypy-dataclasses.*]
ignore_missing_imports = True
